--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="index.css" type="text/css" />
+<link rel="stylesheet" href="menu.css" type="text/css" />
+<link rel="stylesheet" href="test-bord.css" type="text/css" />
+<link rel="stylesheet" href="button.css" type="text/css" />
 
 <head>
     <title>Education</title>
@@ -30,7 +33,16 @@
                 </li>
             </ul>
         </div>
-    </body>
+
 </div>
+<div class="text-field">
+<div class="question-field"></div>
+    <div class="button">
+        <input type="button" name="next" id="next" value="Következő" class="button-next"/>
+        <input type="button" name="back" id="back" value="Előző" class="button-back"/>
+    </div>
+
+</div>
+</body>
 
 </html>
